argocd/infra/sealed-secrets-web/sealed-secrets-ingress.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: sealed-secrets-internal-route
  namespace: sealed-secrets
spec:
  parentRefs:
  - group: gateway.networking.k8s.io	
    kind: Gateway	
    name: gateway-internal
    namespace: default
  hostnames: ["secrets.internal.lazydogs.work"]
  rules:
  - backendRefs:
      - group: ''	
        kind: Service
        name: sealed-secrets-web
        port: 80
        weight: 1
    matches:
      - path:
          type: PathPrefix
          value: /
